--- a/My_Beloved_Client/login.ui
+++ b/My_Beloved_Client/login.ui
@@ -15,6 +15,22 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
+    <item row="1" column="1">
+     <spacer name="verticalSpacer">
+      <property name="orientation">
+       <enum>Qt::Orientation::Vertical</enum>
+      </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::Policy::Fixed</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>100</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
     <item row="0" column="0">
      <spacer name="horizontalSpacer">
       <property name="orientation">
@@ -47,28 +63,12 @@
       </property>
      </spacer>
     </item>
-    <item row="1" column="1">
-     <spacer name="verticalSpacer">
-      <property name="orientation">
-       <enum>Qt::Orientation::Vertical</enum>
-      </property>
-      <property name="sizeType">
-       <enum>QSizePolicy::Policy::Fixed</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>20</width>
-        <height>100</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
     <item row="0" column="1">
-     <widget class="QGroupBox" name="groupBox">
+     <widget class="QGroupBox" name="mew">
       <property name="title">
        <string>GroupBox</string>
       </property>
-      <widget class="QLabel" name="label_2">
+      <widget class="QLabel" name="UE_Label_2">
        <property name="geometry">
         <rect>
          <x>20</x>
@@ -107,7 +107,7 @@
         <string>Confirm password</string>
        </property>
       </widget>
-      <widget class="QTextEdit" name="textEdit_2">
+      <widget class="QTextEdit" name="UE_text">
        <property name="geometry">
         <rect>
          <x>140</x>
@@ -117,7 +117,7 @@
         </rect>
        </property>
       </widget>
-      <widget class="QTextEdit" name="textEdit_3">
+      <widget class="QTextEdit" name="Pwd_text">
        <property name="geometry">
         <rect>
          <x>140</x>
@@ -127,7 +127,7 @@
         </rect>
        </property>
       </widget>
-      <widget class="QTextEdit" name="textEdit_4">
+      <widget class="QTextEdit" name="Confirm_Pwd_text">
        <property name="geometry">
         <rect>
          <x>140</x>
@@ -137,7 +137,7 @@
         </rect>
        </property>
       </widget>
-      <widget class="QRadioButton" name="radioButton">
+      <widget class="QRadioButton" name="Log_Email_Radio">
        <property name="geometry">
         <rect>
          <x>40</x>
@@ -150,7 +150,7 @@
         <string>Login with email</string>
        </property>
       </widget>
-      <widget class="QRadioButton" name="radioButton_2">
+      <widget class="QRadioButton" name="Log_Uname_Radio">
        <property name="geometry">
         <rect>
          <x>210</x>
@@ -163,7 +163,7 @@
         <string>Login with username</string>
        </property>
       </widget>
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="Login_Btn">
        <property name="geometry">
         <rect>
          <x>10</x>
@@ -176,7 +176,7 @@
         <string>Log in</string>
        </property>
       </widget>
-      <widget class="QPushButton" name="pushButton_2">
+      <widget class="QPushButton" name="Forgot_Btn">
        <property name="geometry">
         <rect>
          <x>10</x>
@@ -199,7 +199,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>33</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
