first_01 log.cpp  log.h log.ui

--- a/My_Beloved_Client/log.ui
+++ b/My_Beloved_Client/log.ui
@@ -81,7 +81,7 @@
         </rect>
        </property>
        <property name="text">
-        <string>Log in</string>
+        <string>Log in</</string>
        </property>
       </widget>
       <widget class="QPushButton" name="Signup_btn">
