--- a/My_Beloved_Client/change_profile.ui
+++ b/My_Beloved_Client/change_profile.ui
@@ -11,14 +11,14 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>تغییر پروفایل</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
      <widget class="QGroupBox" name="groupBox">
       <property name="title">
-       <string>GroupBox</string>
+       <string>اطلاعات پروفایل</string>
       </property>
       <widget class="QLabel" name="label">
        <property name="geometry">
@@ -30,7 +30,7 @@
         </rect>
        </property>
        <property name="text">
-        <string>Phone</string>
+        <string>تلفن</string>
        </property>
       </widget>
       <widget class="QLabel" name="label_2">
@@ -43,7 +43,7 @@
         </rect>
        </property>
        <property name="text">
-        <string>First name</string>
+        <string>نام</string>
        </property>
       </widget>
       <widget class="QLabel" name="label_3">
@@ -56,7 +56,7 @@
         </rect>
        </property>
        <property name="text">
-        <string>Email</string>
+        <string>ایمیل</string>
        </property>
       </widget>
       <widget class="QLabel" name="label_4">
@@ -69,7 +69,7 @@
         </rect>
        </property>
        <property name="text">
-        <string>Username</string>
+        <string>نام کاربری</string>
        </property>
       </widget>
       <widget class="QGroupBox" name="groupBox_2">
@@ -82,42 +82,54 @@
         </rect>
        </property>
        <property name="title">
-        <string>CHANGE PASSWORD</string>
+        <string>تغییر رمز عبور</string>
        </property>
        <layout class="QGridLayout" name="gridLayout_2">
-        <item row="2" column="0">
-         <widget class="QLabel" name="label_7">
-          <property name="text">
-           <string>Confirm new password</string>
-          </property>
-         </widget>
-        </item>
         <item row="0" column="0">
          <widget class="QLabel" name="label_6">
           <property name="text">
-           <string>Old password</string>
+           <string>رمز فعلی</string>
           </property>
          </widget>
         </item>
         <item row="1" column="0">
          <widget class="QLabel" name="label_8">
           <property name="text">
-           <string>New password</string>
+           <string>رمز جدید</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <widget class="QLabel" name="label_7">
+          <property name="text">
+           <string>تأیید رمز جدید</string>
           </property>
          </widget>
         </item>
         <item row="0" column="1">
-         <widget class="QTextEdit" name="textEdit_6"/>
+         <widget class="QLineEdit" name="current_password_lineEdit">
+          <property name="echoMode">
+           <enum>QLineEdit::Password</enum>
+          </property>
+         </widget>
         </item>
         <item row="1" column="1">
-         <widget class="QTextEdit" name="textEdit_7"/>
+         <widget class="QLineEdit" name="new_password_lineEdit">
+          <property name="echoMode">
+           <enum>QLineEdit::Password</enum>
+          </property>
+         </widget>
         </item>
         <item row="2" column="1">
-         <widget class="QTextEdit" name="textEdit_8"/>
+         <widget class="QLineEdit" name="confirm_new_password_lineEdit">
+          <property name="echoMode">
+           <enum>QLineEdit::Password</enum>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="save_button">
        <property name="geometry">
         <rect>
          <x>490</x>
@@ -127,10 +139,10 @@
         </rect>
        </property>
        <property name="text">
-        <string>Save changes</string>
+        <string>ذخیره تغییرات</string>
        </property>
       </widget>
-      <widget class="QTextEdit" name="textEdit">
+      <widget class="QLineEdit" name="phone_lineEdit">
        <property name="geometry">
         <rect>
          <x>90</x>
@@ -140,20 +152,7 @@
         </rect>
        </property>
       </widget>
-      <widget class="QLabel" name="label_5">
-       <property name="geometry">
-        <rect>
-         <x>360</x>
-         <y>150</y>
-         <width>60</width>
-         <height>16</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Last name</string>
-       </property>
-      </widget>
-      <widget class="QTextEdit" name="textEdit_2">
+      <widget class="QLineEdit" name="firstname_lineEdit">
        <property name="geometry">
         <rect>
          <x>91</x>
@@ -163,7 +162,7 @@
         </rect>
        </property>
       </widget>
-      <widget class="QTextEdit" name="textEdit_3">
+      <widget class="QLineEdit" name="lastname_lineEdit">
        <property name="geometry">
         <rect>
          <x>490</x>
@@ -173,7 +172,7 @@
         </rect>
        </property>
       </widget>
-      <widget class="QTextEdit" name="textEdit_4">
+      <widget class="QLineEdit" name="email_lineEdit">
        <property name="geometry">
         <rect>
          <x>90</x>
@@ -183,7 +182,7 @@
         </rect>
        </property>
       </widget>
-      <widget class="QTextEdit" name="textEdit_5">
+      <widget class="QLineEdit" name="username_lineEdit">
        <property name="geometry">
         <rect>
          <x>91</x>
