ready to code the main game

--- a/My_Beloved_Client/recoverpass.ui
+++ b/My_Beloved_Client/recoverpass.ui
@@ -18,7 +18,10 @@
     <item row="0" column="1">
      <widget class="QGroupBox" name="groupBox">
       <property name="title">
-       <string>GroupBox</string>
+       <string>Recover your password</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignmentFlag::AlignCenter</set>
       </property>
       <widget class="QTextEdit" name="textEdit">
        <property name="geometry">
@@ -40,7 +43,7 @@
         </rect>
        </property>
        <property name="text">
-        <string>Enter your phone number</string>
+        <string>Phone</string>
        </property>
       </widget>
       <widget class="QPushButton" name="pushButton">
@@ -54,6 +57,19 @@
        </property>
        <property name="text">
         <string>Recover</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="Back_Btn">
+       <property name="geometry">
+        <rect>
+         <x>80</x>
+         <y>240</y>
+         <width>220</width>
+         <height>60</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>back</string>
        </property>
       </widget>
      </widget>
@@ -114,7 +130,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>33</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
